2012-02-24 S. Thiell <stephane.thiell@cea.fr>

	* Worker/EngineClient.py: Fix gateway write performance issue, as seen on a
	very large cluster with a no-grooming test case and lots of small messages
	sent, by calling os.write() as soon as possible (might safely fail if not
	ready as we are in non-blocking mode).

	* NodeSet.py: Internal parsing optimization by adding a "should copy
	RangeSet object?" flag to NodeSetBase constructor in order to save useless
	but slightly costly RangeSet.copy() calls.

	* NodeSet.py: Small rangeset parsing optimization on single node string
	parsing code.

2012-02-19 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Add NodeSet.nsiter(), a fast iterator on nodes as NodeSet
	objects to avoid object-to-string-to-object conversion in some cases when
	using __iter__() -- like in PropagationTreeRouter.dispatch().

2012-02-15 S. Thiell <stephane.thiell@cea.fr>

	* Clush.py: Add --topology <file> hidden option to enable V2 tree
	propagation technology preview.

2012-02-01 S. Thiell <stephane.thiell@cea.fr>

	* RangeSet.py: Fix RangeSet.__setstate__() for proper object unpickling
	from older RangeSet versions. Add unpickling tests.

2012-01-28 S. Thiell <stephane.thiell@cea.fr>

	* RangeSet.py: Discard AVL-tree based implementation, as we noticed that
	built-in set is much faster. New implementation is based on built-in set,
	and slightly changes padding and __iter__() behaviors. Padding value is
	now accessible and settable at any time via a public variable "padding".
	Auto-detection of padding is still available, but it is used as a
	convenience for printing range sets. Moreover, all set-like operations are
	now only based on integers, ignoring RangeSet's padding value. __iter__()
	has been changed in order to iterate over sorted inner set integers,
	instead of string items. A new method striter() is available to iterate
	over string padding-enabled items. These changes allow us to offer a full